--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
         "geometry.h": "c",
         "world.h": "c",
         "string.h": "c"
-    }
+    },
+    "C_Cpp.default.includePath": ["src"],
 }
