--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
         "geometry.h": "c",
         "world.h": "c",
         "string.h": "c",
-        "time.h": "c"
+        "time.h": "c",
+        "prison.h": "c"
     },
 
     "C_Cpp.default.includePath": ["src"],
