--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
         "string.h": "c",
         "time.h": "c",
         "prison.h": "c",
-        "game.h": "c"
+        "game.h": "c",
+        "victoire.h": "c"
     },
 
     "C_Cpp.default.includePath": ["src"],
