--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
         "time.h": "c",
         "prison.h": "c",
         "game.h": "c",
-        "victoire.h": "c"
+        "victoire.h": "c",
+        "game.C": "cpp"
     },
 
     "C_Cpp.default.includePath": ["src"],
