--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,14 @@
         "string.h": "c",
         "time.h": "c",
         "prison.h": "c",
-        "game.h": "c"
+        "game.h": "c",
+        "iterator": "c",
+        "game.C": "cpp"
     },
 
-    "C_Cpp.default.includePath": ["src"],
+    "C_Cpp.default.includePath": [
+        "src"
+    ],
+    "C_Cpp.errorSquiggles": "Disabled",
 }
 
